# rk2apta

./: Untitled-1.html  отчет.docx
Lab13/: main_shapes.py  module_a.py  module_a_fixed.py  module_b.py  module_b_fixed.py  module_shared.py  namespaces.py
Lab13/project13/: main_math_string.py  math_utils.py  string_utils.py
Lab13/shapes/: __init__.py  circle.py  rectangle.py
Lab14/: example.py  pyproject.toml
Lab14/student_utils/: __init__.py  math_tools.py  string_tools.py
Lab14/student_utils/helpers/: __init__.py  formatting.py
lab 10/pythonProject/: products.txt  task1_read_file.py  task2_write_file.py  task3_exceptions.py  task4_custom_error.py
lab-9/lab9/: cafee.py
lab11/pythonProject/Task/: task1_dish.py  task2_deverage.py  task3_poly.py  task4_headchef.py
lab12/pythonProject2/: controller.py  main.py
lab12/pythonProject2/devices/: camera.py  device.py  light.py  thermostat.py
проект 2/: app.js  books.json  index.html  styles.css
